--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.2",
+    "lucide-react": "^0.408.0",
+    "next": "14.2.5",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-icon": "^1.0.0",
+    "react-player": "^2.16.0",
+    "react-responsive": "^10.0.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "postcss": "^8",
+    "prettier": "^3.3.2",
     "tailwindcss": "^3.4.1"
   }
 }
